--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,9 +5,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Já conhece o mascote do <a href="https://github.com">GitHub, o Octocat!!</a></h1>
-    <p>Aqui embaixo, você pode conferir uma versão aleatória desse lindo mascote, que está disponivel no <a href="https://octodex.github.com/">Octodex</a></p>
-    <p>E se você gostou, e quer montar a sua própria versão do Octocat, você consegue fazer isso no <a href="https://myoctocat.com/">My Octocat</a></p>
+    <h1 class="display-4">Do you know the mascot of <a href="https://github.com">GitHub, the Octocat!!</a></h1>
+    <p>Below, you can check out a random version of this beautiful mascot, which is available on the <a href="https://octodex.github.com/">Octodex</a></p>
+    <p>And if you liked it, and want to create your own version of the Octocat, you can do it on <a href="https://myoctocat.com/">My Octocat</a></p>
     <img src= "@Model.octoImage" />
-
 </div>
